--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+svg text {
+  font-family: Montserrat, Avenir Next, Arial, Helvetica, sans-serif;
+}
+
 .arrow {
   stroke-width: 5;
   stroke: #000;
