--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,16 @@
+#body {
+  width: 900px;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+
+svg {
+  border: 1px solid #ccc;
+}
+
 svg text {
   font-family: Montserrat, Avenir Next, Arial, Helvetica, sans-serif;
 }
