nodePreview를 nodeLegend로 이름 변경

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -35,7 +35,7 @@ text.legend-main-title {
   font-weight: bold;
 }
 
-text.legendTitle, text.title {
+text.legendTitle {
   font-size: 15px;
   font-weight: bold;
 }
